[gd_scene load_steps=21 format=2]

[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://levels/1PGame.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/cute beepers.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/InteractSound.wav" type="AudioStream" id=5]
[ext_resource path="res://Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://logotype.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.784314, 0.784314, 0.784314, 0.490196 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.376471, 0, 0.580392, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.784314, 0.784314, 0.784314, 0.490196 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.376471, 0, 0.580392, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.784314, 0.784314, 0.784314, 0.784314 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.784314 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0.784314 )

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
mainGameScene = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Logotype" type="Sprite" parent="Menu"]
position = Vector2( 512, 192 )
scale = Vector2( 0.438889, 0.445313 )
texture = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu"]
margin_left = 272.0
margin_top = 368.0
margin_right = 752.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( -440, -150 )
size_flags_horizontal = 3
size_flags_vertical = 10
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="Menu/VBoxContainer2"]
margin_right = 480.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="PlayButton" type="Button" parent="Menu/VBoxContainer2/MarginContainer"]
margin_left = 50.0
margin_right = 430.0
margin_bottom = 53.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
action_mode = 0
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="Menu/VBoxContainer2"]
margin_top = 73.0
margin_right = 480.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="SettingsButton" type="Button" parent="Menu/VBoxContainer2/MarginContainer2"]
margin_left = 50.0
margin_right = 430.0
margin_bottom = 53.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Settings"

[node name="MarginContainer3" type="MarginContainer" parent="Menu/VBoxContainer2"]
margin_top = 146.0
margin_right = 480.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="QuitButton" type="Button" parent="Menu/VBoxContainer2/MarginContainer3"]
margin_left = 50.0
margin_right = 430.0
margin_bottom = 54.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
action_mode = 0
text = "Quit Game"

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="SettingsLabel" type="Label" parent="Settings"]
margin_left = 320.0
margin_top = 72.0
margin_right = 704.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 6 )
text = "Settings"
align = 1
valign = 1

[node name="ExitButton" type="Button" parent="Settings"]
margin_left = 320.0
margin_top = 512.0
margin_right = 704.0
margin_bottom = 568.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -39.0
margin_right = 320.0
margin_bottom = 39.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/HBoxContainer"]
margin_right = 576.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Master" type="Label" parent="Settings/HBoxContainer/VBoxContainer2"]
margin_top = 16.0
margin_right = 576.0
margin_bottom = 62.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 11 )
text = "Master Volume"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
margin_left = 576.0
margin_top = 288.0
margin_right = 768.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Master" type="HSlider" parent="Settings/VBoxContainer"]
margin_right = 192.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 16 )
custom_styles/grabber_area = SubResource( 15 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="InteractSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="button_up" from="Menu/VBoxContainer2/MarginContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="pressed" from="Menu/VBoxContainer2/MarginContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="button_up" from="Menu/VBoxContainer2/MarginContainer2/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="pressed" from="Menu/VBoxContainer2/MarginContainer2/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="button_up" from="Menu/VBoxContainer2/MarginContainer3/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="pressed" from="Menu/VBoxContainer2/MarginContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="button_up" from="Settings/ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="pressed" from="Settings/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/Master" to="." method="_on_Master_value_changed"]
